kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-api
  namespace: production
  labels:
    app: quiz-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: quiz-api
